<resources>
    <string name="app_name">CryptoTracker3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="submit_text">Submit</string>
    <string name="notes_text">Notes</string>
    <string name="initial_purchase_price_text">Initial Purchase Price</string>
    <string name="days_to_hold_text">Days to Hold</string>
    <string name="sell_percentage_text">Sell Percentage</string>
    <string name="high_sell_price_text">High Sell Price</string>
    <string name="low_sell_price_text">Low Sell Price</string>
    <string name="investment_amount_text">Investment Amount</string>
    <string name="crypto_spinner_description">Selectable Crypto coins</string>
    <string name="news_title">News</string>
    <string name="stats_title">Statistics</string>
    <string name="input_crypto_title">Input Crypto</string>
    <string name="input_title">Input</string>
    <string name="days_left_to_hold_title">Days Left To Hold</string>
    <string name="percentage_title">Percentage</string>
    <string name="investment_title">Investment</string>
    <string name="amount_title">Amount</string>
    <string name="coin_title">Coin</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string-array name="coin_array">
        <item>Ampleforth</item>
        <item>Ankr</item>
        <item>Apollo</item>
        <item>Bancor</item>
        <item>Binancecoin</item>
        <item>Bitcoin</item>
        <item>Bitcoin-Cash</item>
        <item>Cardano</item>
        <item>Chainlink</item>
        <item>Dash</item>
        <item>Ethereum</item>
        <item>Tether</item>
        <item>Polkadot</item>
        <item>Uniswap</item>
        <item>Litecoin</item>
        <item>Internet Computer</item>
        <item>Eos</item>
        <item>The Graph</item>
        <item>Maker</item>
        <item>Numeraire</item>
        <item>Decentraland</item>
        <item>Sushi</item>
        <item>Filecoin</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_title">Settings</string>
    <string name="coin_list">ampleforth,ankr,apollo,bancor,binancecoin,bitcoin,bitcoin-cash,cardano,chainlink,dash,ethereum,tether,polkadot,uniswap,litecoin,internet-computer,eos,the-graph,maker,numeraire,decentraland,sushi,filecoin</string>
    <string name="initial_price_title">Initial price</string>
    <string name="current_price_title">Current Price</string>
    <string name="change_title">Change</string>
    <string name="percentage_change_title">Percentage Change</string>
    <string name="night_mode_text">Night Mode</string>

</resources>