<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cryptotracker3.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_input"
        android:name="com.example.cryptotracker3.ui.input.InputFragment"
        android:label="@string/input_crypto_title"
        tools:layout="@layout/fragment_input" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.cryptotracker3.ui.stats.StatsFragment"
        android:label="@string/stats_title"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.cryptotracker3.ui.news.NewsFragment"
        android:label="@string/news_title"
        tools:layout="@layout/fragment_stats" />

    <activity
        android:id="@+id/navigation_settings"
        android:name="com.example.cryptotracker3.ui.settings.SettingsActivity"
        android:label="@string/settings_title"
        tools:layout="@layout/settings_activity"/>

</navigation>